# docs/swagger.json
@@ -12,6 +12,9 @@
         "/refresh": {
             "get": {
                 "description": "restart task manager in order to add new accounts",
+                "tags": [
+                    "General"
+                ],
                 "summary": "Restart task manager",
                 "operationId": "restart-task-manager",
                 "responses": {}
@@ -23,7 +26,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "All statuses",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Get all statuses",
                 "operationId": "get-all-status",
                 "responses": {}
             }
@@ -34,7 +40,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Status by id",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Get status by id",
                 "operationId": "get-status-by-id",
                 "parameters": [
                     {
@@ -51,7 +60,10 @@
                 "consumes": [
                     "application/json"
                 ],
-                "summary": "Status by id",
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Update status by id",
                 "operationId": "get-status-by-id",
                 "parameters": [
                     {
@@ -67,11 +79,25 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/task.Status"
                         }
                     }
                 ],
                 "responses": {}
+            }
+        }
+    },
+    "definitions": {
+        "task.Status": {
+            "description": "Model with information about tasks and their parameters",
+            "type": "object",
+            "properties": {
+                "arena_farming": {
+                    "type": "boolean"
+                },
+                "arena_use_energy_cans": {
+                    "type": "boolean"
+                }
             }
         }
     }
